@@ -108,6 +108,8 @@ Version 1.4.5 - CVS
     9. Allow editing of identity (#847107).
   - Fix get_identities() for the case where the user has not set an email
     address: use the fallback $username@$domain that's used in compose aswell.
+  - Fix "Include me in CC on Reply All" for the case where email address was
+    not set in the prefs (#781202, #1093363).
 
 Version 1.4.4 - 21 January 2005
 -------------------------------
